--- a/src/main/resources/templates/htmls/actualGame.html
+++ b/src/main/resources/templates/htmls/actualGame.html
@@ -3,14 +3,21 @@
 
 <head>
 
+    
+  
+    <script src="../javaScript/fechasDeJuegos.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="../estilos/nysl_2.css" rel="stylesheet" type="text/css">
-    <meta charset="utf-8">
-    <link rel="icon" href="../imagenes/nysl_logo.png"/>
-    <title>Actual game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <title>Schedule games</title>
 
 </head>
 
-<body class="game">
+<body style="background-color: midnightblue">
+
 
     <header>
 
@@ -20,52 +27,46 @@
 
     <nav>
 
-        <a class="icono" href="../htmls/gameRules.html">
-            <img  src="../imagenes/gameRules1.png" alt="HTML tutorial">
+        <a class=" icono" href="../htmls/gameRules.html">
+            <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
 
-        <hr id="hr1">
-        
+
         <a class="icono" href="../htmls/aboutNYSL.html">
-            <img  src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
+            <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
-        
-        <hr id="hr2">
+
 
         <a class="icono" href="../htmls/gamesResults.html">
-            <img  src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
+            <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
 
     </nav>
 
-    <section id="subtittle">
+    <div id="subtittle">
 
         Actual game
 
-    </section>
+    </div>
 
-    
+
+
     <footer>
-      <a class="icono" href="../htmls/scheduleGames.html">
-            <img  src="../imagenes/scheduleGames.png" alt="HTML tutorial">
+        <a class="icono" href="../htmls/scheduleGames.html">
+            <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
 
-        <hr id="hr3">
-        
+
+
         <a class="icono" href="../htmls/nextGame.html">
-            <img  src="../imagenes/nextGame.png" alt="HTML tutorial">
+            <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
+
         
-        <hr id="hr4">
-
         <a class="icono" href="../htmls/actualGame.html">
-            <img  src="../imagenes/actualGame.png" alt="HTML tutorial">
+            <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
-</footer>
-
-
-
-
+    </footer>
 </body>
 
 
