--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -29,17 +29,17 @@
 
     <nav>
 
-        <a class=" icono" href="../htmls/gameRules.html">
+        <a class=" icono" href="gameRules.html">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="../htmls/aboutNYSL.html">
+        <a class="icono" href="aboutNYSL.html">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="../htmls/gamesResults.html">
+        <a class="icono" href="gamesResults.html">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
 
@@ -180,18 +180,18 @@
     
 
     <footer>
-        <a class="icono" href="../htmls/scheduleGames.html">
+        <a class="icono" href="scheduleGames.html">
             <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
 
 
 
-        <a class="icono" href="../htmls/nextGame.html">
+        <a class="icono" href="nextGame.html">
             <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
 
         
-        <a class="icono" href="../htmls/actualGame.html">
+        <a class="icono" href="actualGame.html">
             <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
     </footer>
