--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -29,7 +29,7 @@
 
     <nav>
 
-        <a class=" icono" href="gameRules.html">
+        <a class=" icono" href="/gameRules.html">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
 
