--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -191,7 +191,7 @@
         </a>
 
         
-        <a class="icono" href="actualGame">
+        <a class="icono" href="actualGame.html">
             <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
     </footer>
