--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -6,7 +6,6 @@
     
   
     <script src="../javaScript/fechasDeJuegos.js"></script>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="../estilos/nysl_2.css" rel="stylesheet" type="text/css">
@@ -29,17 +28,17 @@
 
     <nav>
 
-        <a class=" icono" href="/gameRules.html">
+        <a class=" icono" href="gameRules">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="aboutNYSL.html">
+        <a class="icono" href="aboutNYSL">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="gamesResults.html">
+        <a class="icono" href="gamesResults">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
 
@@ -180,13 +179,13 @@
     
 
     <footer>
-        <a class="icono" href="scheduleGames.html">
+        <a class="icono" href="scheduleGames">
             <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
 
 
 
-        <a class="icono" href="nextGame.html">
+        <a class="icono" href="nextGame">
             <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
 
