--- a/src/main/resources/templates/aboutNYSL.html
+++ b/src/main/resources/templates/aboutNYSL.html
@@ -6,13 +6,14 @@
     
   
     <script src="../javaScript/fechasDeJuegos.js"></script>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="../estilos/nysl_2.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <link rel="shortcut icon" href="../imagenes/nysl_logo.png">
     <title>Schedule games</title>
+    
 
 </head>
 
@@ -27,17 +28,17 @@
 
     <nav>
 
-        <a class=" icono" href="../htmls/gameRules.html">
+        <a class=" icono" href="gameRules">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="../htmls/aboutNYSL.html">
+        <a class="icono" href="aboutNYSL">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
 
 
-        <a class="icono" href="../htmls/gamesResults.html">
+        <a class="icono" href="gamesResults">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
 
@@ -50,20 +51,19 @@
     </div>
 
 
-
     <footer>
-        <a class="icono" href="../htmls/scheduleGames.html">
+        <a class="icono" href="scheduleGames">
             <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
 
 
 
-        <a class="icono" href="../htmls/nextGame.html">
+        <a class="icono" href="nextGame">
             <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
 
         
-        <a class="icono" href="../htmls/actualGame.html">
+        <a class="icono" href="actualGame">
             <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
     </footer>
