--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -31,19 +31,19 @@
 
         <div class="row" >
         <div class="col" >
-        <a class=" icono" href="../htmls/gameRules.html">
+        <a class=" icono" href="/gameRules.html">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col">
-        <a class="icono" href="../htmls/aboutNYSL.html">
+        <a class="icono" href="/aboutNYSL.html">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col">
-        <a class="icono" href="../htmls/gamesResults.html">
+        <a class="icono" href="/htmls/gamesResults.html">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
         </div>
