--- a/src/main/resources/templates/todaysGames.html
+++ b/src/main/resources/templates/todaysGames.html
@@ -28,19 +28,26 @@
 
     <nav>
 
+       <div class="row" >
+        <div class="col" >
         <a class=" icono" href="gameRules">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
+        </div>
 
-
+        <div class="col">
         <a class="icono" href="aboutNYSL">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
+        </div>
 
-
+        <div class="col">
         <a class="icono" href="gamesResults">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
+        </div>
+            
+        </div>
 
     </nav>
 
@@ -52,20 +59,26 @@
 
 
     <footer>
+       <div class="row" >
+        <div class="col" >
         <a class="icono" href="scheduleGames">
             <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
+        </div>
 
-
-
+        <div class="col">
         <a class="icono" href="nextGame">
             <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
+        </div>
 
-        
+        <div class="col" >
         <a class="icono" href="actualGame">
             <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
+        </div>
+            
+        </div>
     </footer>
 </body>
 
