--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -31,19 +31,19 @@
 
         <div class="row" >
         <div class="col" >
-        <a class=" icono" href="/gameRules">
+        <a class=" icono" href="gameRules">
             <img class="" src="../imagenes/gameRules1.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col">
-        <a class="icono" href="/aboutNYSL">
+        <a class="icono" href="aboutNYSL">
             <img class="img-responsive" src="../imagenes/aboutNYSL1.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col">
-        <a class="icono" href="/htmls/gamesResults">
+        <a class="icono" href="gamesResults">
             <img class="img-responsive" src="../imagenes/gamesResultsDale.png" alt="HTML tutorial">
         </a>
         </div>
@@ -188,19 +188,19 @@
     <footer>
         <div class="row" >
         <div class="col" >
-        <a class="icono" href="../htmls/scheduleGames.html">
+        <a class="icono" href="scheduleGames">
             <img class="img-responsive" src="../imagenes/scheduleGames.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col">
-        <a class="icono" href="../htmls/nextGame.html">
+        <a class="icono" href="nextGame">
             <img class="img-responsive" src="../imagenes/nextGame.png" alt="HTML tutorial">
         </a>
         </div>
 
         <div class="col" >
-        <a class="icono" href="../htmls/actualGame.html">
+        <a class="icono" href="actualGame">
             <img class="img-responsive" src="../imagenes/actualGame.png" alt="HTML tutorial">
         </a>
         </div>
