--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -81,7 +81,7 @@
     </div>
 
    
-        <table id="tablaDeFechas" >
+        <table id="tablaDeFechas container" >
             <script>
 
                 imprimirTabla(fechas);
