--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -87,27 +87,27 @@
                 imprimirTabla(fechas);
 
                 function imprimirTablaPorMes() {
-                    var valorMes = document.getElementById('mes').value;
+                    var valorMes = document.getElementById("mes").value;
                     if (valorMes != "select month" || valorMes != "all months") {
-                        document.getElementById('team').value = "select team";
+                        document.getElementById("team").value = "select team";
                         fechasBuscadas = filtrarMiembrosPorMes(valorMes);
                         imprimirTabla(fechasBuscadas);
                     }
                     if (valorMes == "all months"){
-                        document.getElementById('team').value = "select team";
+                        document.getElementById("team").value = "select team";
                         imprimirTabla(fechas);
                     }
                 }
 
                 function imprimirTablaPorTeam() {
-                    var valorTeam = document.getElementById('team').value;
+                    var valorTeam = document.getElementById("team").value;
                     if (valorTeam != "all teams" || valorTeam != "select team") {
-                        document.getElementById('mes').value = "select month";
+                        document.getElementById("mes").value = "select month";
                         fechasBuscadas = filtrarMiembrosPorTeam(valorTeam);
                         imprimirTabla(fechasBuscadas);
                     }
                     if (valorTeam == "all teams"){
-                        document.getElementById('mes').value = "select month";
+                        document.getElementById("mes").value = "select month";
                         imprimirTabla(fechas);
                     }
                 }
@@ -172,7 +172,6 @@
                     document.getElementById('tablaDeFechas').innerHTML = tabla;
                     
                 }
-
 
             </script>
 
