--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -57,9 +57,9 @@
 
     </div>
 
-    <div class="navbar">
+    <div class="filtros navbar">
 
-            <select id="mes" onchange="imprimirTablaPorMes()">
+            <select id="mes"  onchange="imprimirTablaPorMes()">
                 <option value="select month">select month</option>
                 <option value="all months">all months</option>
                 <option value="September">September</option>
@@ -68,7 +68,7 @@
         
 
         
-            <select id="team" onchange="imprimirTablaPorTeam()">
+            <select id="team"  onchange="imprimirTablaPorTeam()">
                 <option value="select team">select team</option>
                 <option value="all teams">all teams</option>
                 <option value="U1">U1</option>
@@ -80,34 +80,34 @@
             </select>
     </div>
 
-   
-        <table id="tablaDeFechas container" >
+
+        <table id="tablaDeFechas" class="container" >
             <script>
 
                 imprimirTabla(fechas);
 
                 function imprimirTablaPorMes() {
-                    var valorMes = document.getElementById("mes").value;
+                    var valorMes = document.getElementById('mes').value;
                     if (valorMes != "select month" || valorMes != "all months") {
-                        document.getElementById("team").value = "select team";
+                        document.getElementById('team').value = "select team";
                         fechasBuscadas = filtrarMiembrosPorMes(valorMes);
                         imprimirTabla(fechasBuscadas);
                     }
                     if (valorMes == "all months"){
-                        document.getElementById("team").value = "select team";
+                        document.getElementById('team').value = "select team";
                         imprimirTabla(fechas);
                     }
                 }
 
                 function imprimirTablaPorTeam() {
-                    var valorTeam = document.getElementById("team").value;
+                    var valorTeam = document.getElementById('team').value;
                     if (valorTeam != "all teams" || valorTeam != "select team") {
-                        document.getElementById("mes").value = "select month";
+                        document.getElementById('mes').value = "select month";
                         fechasBuscadas = filtrarMiembrosPorTeam(valorTeam);
                         imprimirTabla(fechasBuscadas);
                     }
                     if (valorTeam == "all teams"){
-                        document.getElementById("mes").value = "select month";
+                        document.getElementById('mes').value = "select month";
                         imprimirTabla(fechas);
                     }
                 }
