--- a/src/main/resources/templates/scheduleGames.html
+++ b/src/main/resources/templates/scheduleGames.html
@@ -6,13 +6,19 @@
     
   
     <script src="../javaScript/fechasDeJuegos.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="../estilos/nysl_2.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
+    
 
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+   
+    
     <link rel="shortcut icon" href="../imagenes/nysl_logo.png">
+
+    
     <title>Schedule games</title>
     
 
