--- a/demo/src/main/resources/templates/principal.html
+++ b/demo/src/main/resources/templates/principal.html
@@ -6,18 +6,18 @@
   <meta content="text/html" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <title> Principal </title>
-  <script type="text/javascript" src="funciones.js"></script>
+  <script type="text/javascript" src="../funciones.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous">
   </script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body class="card text-center">
 
-<img class="img-fluid" src="mafaldita.png" alt="mafaldita">
+<img class="img-fluid" src="../mafaldita.png" alt="mafaldita">
 <span class="text-center"> [Aquí tendremos las páginas que necesitamos a mano!... pues favoritos no sirve  (? ]</span>
 <button id="volverAlInicio" type="button" onclick="goHome()" class='btn btn-dark'> VOLVER AL INICIO </button>
 <button id="agregarPack" type="button" onclick="mostrarFormNuevoPack()" class='btn btn-dark'> AGREGAR PACK </button>
