--- a/paginas/experimentosPaginas/estilo.css
+++ b/paginas/experimentosPaginas/estilo.css
@@ -10,6 +10,8 @@ body {
 h6 {
     /* font-size: 560px; */
     font-size: 70px;
+    /* color: #2db6a0; */
+    color: rgb(55, 490, 12);
     font-family: Amatic;
 }
 
